@@ -55,6 +55,28 @@
             <artifactId>hibernate-core</artifactId>
             <version>5.3.10.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>4.0.16-alpha</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -68,7 +90,22 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
+                        --add-opens=otp/otp.model.entities=org.hibernate.orm.core
+                        --add-opens=otp/otp.controllers=ALL-UNNAMED
+                        --add-modules=javafx.graphics,javafx.fxml
+                        --add-reads javafx.graphics=ALL-UNNAMED
+                        --add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED
+                        --add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -95,6 +132,15 @@
                     <options>
                         <option>
                             --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
+                        </option>
+                        <option>
+                            -add-reads javafx.graphics=ALL-UNNAMED
+                        </option>
+                        <option>
+                            --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        </option>
+                        <option>
+                            --add-opens=otp/otp.controllers=ALL-UNNAMED
                         </option>
                     </options>
                 </configuration>
